VDYP-712: SonarQube - code review issue fix(6)